# Storage_model

./: CMakeLists.txt  LICENSE  main.cpp
back/: class_prod.hpp  database.hpp  help_func.hpp  main_back.hpp  shop_request.hpp
front/App/: App.cpp  App.h
front/ProductCard/: ProductCard.h
